# nnterp

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  MANIFEST.in  Makefile  NEMI.ipynb  README.md  TEST_FAILURE_REPORT.md  VLLM_SUMMARY.md  adding-model-support.html  advanced-features.html  api.html  basic-usage.html  changelog.html  correct_minimal_test.py  demo.ipynb  demo.py  deploy.py  explore_attention_structure.py  find_attention_hook.py  find_eager_attention.py  genindex.html  index.html  interventions.html  llms.txt  minimal_fail.py  minimal_test.py  model-validation.html  nnsight-best-practices.html  nnsight-utils.html  nnsight_utils.py  objects.inv  py-modindex.html  pyproject.toml  quick_attention_check.py  quick_test.py  readme2.md  search.html  (+20 more)
.claude/skills/: doc-edit.md
.claude/skills/find-attention-hooks/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: docs.yml
_modules/: index.html
_modules/nnterp/: display.html  interventions.html  nnsight_utils.html  prompt_utils.html  rename_utils.html  standardized_transformer.html  utils.html
_sources/: adding-model-support.rst.txt  advanced-features.rst.txt  api.rst.txt  basic-usage.rst.txt  index.rst.txt  interventions.rst.txt  model-validation.rst.txt  nnsight-utils.rst.txt
_sources/getting-started/: quickstart.rst.txt
data/: status.json  test_loading_status.json
dev/: .buildinfo  adding-model-support.html  advanced-features.html  api.html  basic-usage.html  changelog.html  genindex.html  index.html  interventions.html  llms.txt  model-validation.html  nnsight-best-practices.html  nnsight-utils.html  objects.inv  py-modindex.html  search.html  searchindex.js
dev/_modules/: index.html
dev/_modules/nnterp/: display.html  interventions.html  nnsight_utils.html  prompt_utils.html  rename_utils.html  standardized_transformer.html  utils.html
dev/_sources/: basic-usage.rst.txt  index.rst.txt  nnsight-best-practices.rst.txt
dev/_sources/getting-started/: quickstart.rst.txt
dev/getting-started/: installation.html  quickstart.html
docs/: README_BEFORE_EDITING_THE_DOC.md  adding-model-support.rst  advanced-features.rst  api.rst  basic-usage.rst  changelog.rst  conf.py  glossary.md  index.rst  interventions.rst  llms.txt  llms_header.txt  model-validation.rst  nnsight-best-practices.rst  nnsight-utils.rst  readme.rst
docs/_static/: custom.css  source-link-navbar.js
docs/getting-started/: installation.rst  quickstart.rst
getting-started/: installation.html  quickstart.html
nnterp/: StandardizedTransformer.py  __init__.py  __main__.py  display.py  interventions.py  model_imports.py  model_patching.py  nnsight_utils.py  prompt_utils.py  rename_utils.py  standardized_transformer.py  standardized_vllm.py  utils.py
nnterp/data/: status.json  test_loading_status.json
nnterp/tests/: conftest.py  test_config.yaml  test_interventions.py  test_model_renaming.py  test_nnsight_utils.py  test_probabilities.py  test_prompt_utils.py  test_router.py  test_router_probabilities.py  utils.py
scripts/: all_models.py  check_models_all_transformer_versions.sh  coverage.sh  run_tests.sh  run_tests_parallel.sh  smoke.py  tests_all_transformer_versions.sh  update_llms_txt.py
tests/: conftest.py  test_collect_activations.py  test_interventions.py  test_model_patching.py  test_model_renaming.py  test_nnsight_utils.py  test_probabilities.py  test_prompt_utils.py  utils.py
