[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"
[tool.setuptools_scm]

[project]
dynamic = ["version"]
name = "nnterp"
authors = [
  { name="Clément Dumas", email="butanium.contact@gmail.com" },
]
description = "Utils and mechanistic interpretability intervensions using nnsight"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "loguru>=0.7.3",
    "nnsight>=0.5.0.dev8",
    "transformers",
]
[project.optional-dependencies]
display = ["plotly", "pandas"]
docs = [
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "myst-parser>=2.0.0",
    "sphinx-copybutton",
    "pydata-sphinx-theme",
    "sphinx-design",
    "nbsphinx",
]
dev = [
    "sphinx>=7.2.0",
    "pytest",
    "ipykernel",
    "ipywidgets",
    "pre-commit",
    "black[jupyter]",
    "jupytext",
    "build",
    "ruff",
    # "flash-attn",  # Note: requires --no-build-isolation flag due to torch build dependency issue. Install with `uv pip install flash-attn --no-build-isolation`
]
vllm = [
    "vllm",
]
[project.urls]
"Homepage" = "https://github.com/butanium/nnterp"

[tool.setuptools]
packages = ["nnterp"]
include-package-data = true

[tool.setuptools.package-data]
nnterp = ["py.typed"]
"*" = ["data/", "tests/*"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

