[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"
[tool.setuptools_scm]

[project]
dynamic = ["version"]
name = "nnterp"
authors = [{ name = "Clément Dumas", email = "butanium.contact@gmail.com" }]
description = "Utils and mechanistic interpretability intervensions using nnsight"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["loguru>=0.7.3", "nnsight>=0.5", "transformers"]
[project.optional-dependencies]
display = ["plotly", "pandas"]


llms = [
    "pillow",
    "timm",
    "flash-attn; sys_platform != 'win32'",
    "hf_xet",
    "sentencepiece",
]

vllm = ["nnsight[vllm]"]
[project.urls]
"Homepage" = "https://github.com/butanium/nnterp"

[dependency-groups]
dev = [
    "filelock>=3.19.1",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.8.0",
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "myst-parser>=2.0.0",
    "sphinx-copybutton",
    "pydata-sphinx-theme",
    "sphinx-design",
    "nbsphinx",
    "pytest>=7.0",
    "ipykernel",
    "ipywidgets",
    "pre-commit",
    "black[jupyter]",
    "jupytext",
    "jupyter",
    "build",
    "ruff",
]

docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "myst-parser>=2.0.0",
    "sphinx-copybutton",
    "pydata-sphinx-theme",
    "sphinx-design",
    "nbsphinx",
]

[tool.setuptools]
packages = ["nnterp"]
include-package-data = true

[tool.setuptools.package-data]
nnterp = ["py.typed"]
"*" = ["tests/*"]

[tool.coverage.run]
omit = ["nnterp/tests/*"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]

[tool.uv.extra-build-variables]
flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "TRUE" }

[tool.pytest.ini_options]
testpaths = ["nnterp/tests"]
